@@ -18,11 +18,10 @@
 package org.apache.solr.handler;
 
 import java.io.IOException;
-import java.util.Map;
 import java.util.ArrayList;
 
 import org.apache.commons.io.IOUtils;
-import org.apache.solr.request.ContentStream;
+import org.apache.solr.util.ContentStream;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.request.SolrQueryResponse;
 import org.apache.solr.util.NamedList;
